--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="content-type" content="text/html">
         <meta name="viewport" content="maximum-scale=1, width=device-width, initial-scale=1">
-        <title>cursed</title>
+        <title>What a Horrible Night to be Cursed</title>
     </head>
     <body>
         <script src="index.js" type="text/javascript"></script>
